# NVS2COLMAP

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pip-publish.yml
nvs2colmap/: colmap.py  extract_videos.py
nvs2colmap/n3dv/: README.md  __main__.py  extract_videos.py  poses_bounds.py
nvs2colmap/utils/: __init__.py  colmap.py  ffmpeg.py  rotation.py
