[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nvs2colmap"
version = "0.1.0"
description = "Utilities for converting novel view synthesis datasets to COLMAP format."
readme = "README.md"
authors = [{ name = "Howard Yin", email = "yindaheng98@gmail.com" }]
maintainers = [{ name = "Howard Yin", email = "yindaheng98@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "torch",
]
keywords = [
    "colmap",
    "novel-view-synthesis",
    "neural-3d-video",
    "3d-reconstruction",
    "computer-vision",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
]

[project.urls]
Homepage = "https://github.com/yindaheng98/NVS2COLMAP"
Documentation = "https://github.com/yindaheng98/NVS2COLMAP#readme"
Repository = "https://github.com/yindaheng98/NVS2COLMAP"
Issues = "https://github.com/yindaheng98/NVS2COLMAP/issues"

[project.scripts]
nvs2colmap-n3dv = "nvs2colmap.n3dv.__main__:main"

[tool.setuptools]
packages = { find = { include = ["nvs2colmap*"] } }

[tool.setuptools.package-dir]
"" = "."
